[gd_scene load_steps=9 format=3 uid="uid://h4333mcowhp1"]

[ext_resource type="Script" uid="uid://dmggl6cwl5duo" path="res://Scripts/spider.gd" id="1_dght0"]
[ext_resource type="Texture2D" uid="uid://bb22otyrhmu8f" path="res://Sprites/Worm_Sprite.png" id="2_dght0"]
[ext_resource type="AudioStream" uid="uid://dex4tmhern3ul" path="res://Sounds/SpiderHurt.wav" id="3_k5h7g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2kjjy"]
atlas = ExtResource("2_dght0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5h7g"]
atlas = ExtResource("2_dght0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w53yw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kjjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5h7g")
}],
"loop": true,
"name": &"Moving",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2saq"]
radius = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rsddn"]
radius = 7.0
height = 32.0

[node name="Spider" type="CharacterBody2D"]
script = ExtResource("1_dght0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_w53yw")
animation = &"Moving"
autoplay = "Moving"
frame_progress = 0.313663

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
rotation = 1.5708
shape = SubResource("CircleShape2D_g2saq")

[node name="SpiderHitBox" type="Area2D" parent="."]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpiderHitBox"]
position = Vector2(0, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rsddn")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_k5h7g")

[connection signal="area_entered" from="SpiderHitBox" to="." method="_on_spider_hit_box_area_entered"]
[connection signal="finished" from="HurtSound" to="." method="_on_hurt_sound_finished"]
